--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61b96de050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c98904d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61b97373d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61b97375d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c94e8f350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c94e8f550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61b9ce0cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61b9ce0ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c95431c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c95431e50&gt;]</pre>
 </div>
 
 </div>
