--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c98904d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bafc71a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c94e8f350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c94e8f550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bb000c3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bb000c5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c95431c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c95431e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bb05afd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bb05aff10&gt;]</pre>
 </div>
 
 </div>
