--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbea7eebc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72813e9c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbea84c8450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbea84c8690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7280ddf790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7280ddf990&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbea8a6acd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbea8a6af10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7281373090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7281373290&gt;]</pre>
 </div>
 
 </div>
