--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1c334d310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8173672650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1c332b9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1c332bbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f81736469d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8173646bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1c38ca410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1c38ca610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8173be9450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8173be9650&gt;]</pre>
 </div>
 
 </div>
