--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f935f576fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59a55f8fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f935f546d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f935f546f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59a52fedd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59a52fefd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f935faed610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f935faed810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59a58a5750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59a58a5950&gt;]</pre>
 </div>
 
 </div>
