--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9353f2ed90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d92621c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9353c217d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9353c219d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d92327a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d92327c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93541c21d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93541c23d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d928d0390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d928d0590&gt;]</pre>
 </div>
 
 </div>
