--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba52d2f090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ede8962d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba52d29a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba52d29c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ede590a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4ede590c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba532cb450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba532cb650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4edeb354d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4edeb356d0&gt;]</pre>
 </div>
 
 </div>
