--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c75677650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80154edf50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c75655a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c75655c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80151f0b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80151f0dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c75bf8450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c75bf8650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8015797510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8015797750&gt;]</pre>
 </div>
 
 </div>
