--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80154edf50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb85bdd6ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f80151f0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f80151f0dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85bd6a890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb85bd6aa90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8015797510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8015797750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85c345250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb85c345450&gt;]</pre>
 </div>
 
 </div>
