--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb85bdd6ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f443f061d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85bd6a890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb85bd6aa90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f443ed3ea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f443ed3ec50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85c345250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb85c345450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f443f2e4350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f443f2e4550&gt;]</pre>
 </div>
 
 </div>
