--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f443f061d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9b0ddde10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f443ed3ea50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f443ed3ec50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9b0d865d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9b0dadcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f443f2e4350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f443f2e4550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9b139fa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9b1353710&gt;]</pre>
 </div>
 
 </div>
