--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a9f8e2cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f263abf8110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a9f5a4210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8a9f5b6c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f263abbca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f263abbcc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a9fb733d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8a9fbc6590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f263b1614d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f263b1616d0&gt;]</pre>
 </div>
 
 </div>
