--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb871c7550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4830689d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb8715b950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb8715bb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48306cda10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48306cdc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb87736250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb87736490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4830c733d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4830c735d0&gt;]</pre>
 </div>
 
 </div>
