--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f58c6eb4e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf25446bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f58c6bbad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f58c6bbaf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf2514cb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdf2514cd50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f58c7161690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f58c7161890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf256f2590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdf256f2790&gt;]</pre>
 </div>
 
 </div>
