--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff46a346750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff54e145e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff46a04fad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff46a04fcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff54de53990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff54de53b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff46a5f3510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff46a5f3710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff54e3f1390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff54e3f1590&gt;]</pre>
 </div>
 
 </div>
