--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff54e145e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc5ba47ec10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff54de53990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff54de53b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5ba18c910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc5ba18cb10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff54e3f1390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff54e3f1590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5ba72c250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc5ba72c450&gt;]</pre>
 </div>
 
 </div>
