--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab82dedc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6477b50d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab82ad9950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab82ad9b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe64749eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe64749ed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab83079410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab83079610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe647a41550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe647a41750&gt;]</pre>
 </div>
 
 </div>
