--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6477b50d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff20c6cec90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe64749eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe64749ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff20c3d8a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff20c3d8c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe647a41550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe647a41750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff20c97c3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff20c97c5d0&gt;]</pre>
 </div>
 
 </div>
