--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feaf97f8d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac2b05a950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feaf94e3890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feaf94e3a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac2b028b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac2b028d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feaf9a831d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feaf9a833d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac2b5d0510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac2b5d0710&gt;]</pre>
 </div>
 
 </div>
