--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4a1d69b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51f5d31850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4a1dc29d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4a20f5850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f5d7f8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51f5d7fad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4a2361410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4a23979d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f6326310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51f6326510&gt;]</pre>
 </div>
 
 </div>
