--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51f5d31850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcaa7d7ee90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f5d7f8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51f5d7fad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcaa7a8f950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcaa7a8fb50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f6326310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51f6326510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcaa802e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcaa802e4d0&gt;]</pre>
 </div>
 
 </div>
