--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cf5f14d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd577e4e9d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf5c1aad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cf5c1acd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd57705cbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd57705cdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf61c04d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cf61c06d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd577604510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd577604710&gt;]</pre>
 </div>
 
 </div>
