--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcddab39d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f10a9a0d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdda846910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcdda846b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f10a6f9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f10a6fbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcddade5310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcddade5510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f1105a110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f1100f510&gt;]</pre>
 </div>
 
 </div>
